--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@xyflow/react": "^12.7.1",
     "lucide-react": "^0.517.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.10"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
