--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.517.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
